--- a/.github/workflows/cd_prod.yaml
+++ b/.github/workflows/cd_prod.yaml
@@ -20,11 +20,22 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
+        
 
       - name: Config GitHub
         run: |
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
           git config --global user.name "${{secrets.GIT_USER_NAME}}"
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        id: pnpm-install
+        with:
+          version: 7
+          run_install: false
   
       - name: Install Vercel CLI
         run: npm install --global vercel
