Add hml and prod urls

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=
+REACT_APP_API_URL_HML=https://homolog-tcc-bank-api-e42db4adc331.herokuapp.com/
+REACT_APP_API_URL_PROD=https://prod-tcc-bank-api-bc05adb0e8e9.herokuapp.com/
