--- a/.github/workflows/ci_sca_depcheck.yaml
+++ b/.github/workflows/ci_sca_depcheck.yaml
@@ -25,7 +25,7 @@ jobs:
           version: 8
 
       - name: install pnpm
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       # SCA
       # SNYK
