--- a/.github/workflows/ci_sca_depcheck.yaml
+++ b/.github/workflows/ci_sca_depcheck.yaml
@@ -43,10 +43,10 @@ jobs:
       #     sarif_file: snyk.sarif
       #     category: my-analysis-tool
 
-      - name: where pnpm
-        run: |
-          which pnpm-lock.yaml
-          which pnpm
+      # - name: where pnpm
+      #   run: |
+      #     which pnpm-lock.yaml
+      #     which pnpm
       
       # OWASP DEPENDENCY CHECK
       - name: Depcheck
