--- a/.github/workflows/ci_sca_depcheck.yaml
+++ b/.github/workflows/ci_sca_depcheck.yaml
@@ -54,12 +54,12 @@ jobs:
         id: Depcheck
         with:
           project: 'tcc-password-manager'
-          path: 'pnpm-lock.yaml'
+          path: '/home/runner/work/tcc-bank/tcc-bank/pnpm-lock.yaml'
           format: 'HTML'
           out: '.'
           args: >
             --enableRetired
-            --pnpm 'node_modules/.bin/pnpm'
+            --pnpm '/home/runner/setup-pnpm/node_modules/.bin/pnpm'
 
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v3
