--- a/.github/workflows/ci_sca_depcheck.yaml
+++ b/.github/workflows/ci_sca_depcheck.yaml
@@ -3,6 +3,8 @@ name: SCA Tests
 on:
   pull_request:
     branches: [develop]
+  push:
+    branches: [results]
 
 jobs:
   sca_depcheck:
@@ -51,7 +53,7 @@ jobs:
       # OWASP DEPENDENCY CHECK
       - name: Depcheck
         uses: dependency-check/Dependency-Check_Action@main
-        id: Depcheck
+        id: Depcheck1
         with:
           project: 'tcc-password-manager'
           path: '/home/runner/work/tcc-bank/tcc-bank/pnpm-lock.yaml'
@@ -60,6 +62,18 @@ jobs:
           args: >
             --enableRetired
             --pnpm '/home/runner/setup-pnpm/node_modules/.bin/pnpm'
+
+      # OWASP DEPENDENCY CHECK
+      - name: Depcheck
+        uses: dependency-check/Dependency-Check_Action@main
+        id: Depcheck
+        with:
+          project: 'tcc-password-manager'
+          path: './'
+          format: 'HTML'
+          out: '.'
+          args: >
+            --enableRetired
 
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v3
