--- a/.github/workflows/ci_sca_depcheck.yaml
+++ b/.github/workflows/ci_sca_depcheck.yaml
@@ -56,24 +56,24 @@ jobs:
         id: Depcheck1
         with:
           project: 'tcc-password-manager'
-          path: '/home/runner/work/tcc-bank/tcc-bank/pnpm-lock.yaml'
+          path: 'pnpm-lock.yaml'
           format: 'HTML'
           out: '.'
           args: >
             --enableRetired
             --pnpm '/home/runner/setup-pnpm/node_modules/.bin/pnpm'
 
-      # OWASP DEPENDENCY CHECK
-      - name: Depcheck
-        uses: dependency-check/Dependency-Check_Action@main
-        id: Depcheck
-        with:
-          project: 'tcc-password-manager'
-          path: './'
-          format: 'HTML'
-          out: '.'
-          args: >
-            --enableRetired
+      # # OWASP DEPENDENCY CHECK
+      # - name: Depcheck
+      #   uses: dependency-check/Dependency-Check_Action@main
+      #   id: Depcheck
+      #   with:
+      #     project: 'tcc-password-manager'
+      #     path: './'
+      #     format: 'HTML'
+      #     out: '.'
+      #     args: >
+      #       --enableRetired
 
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v3
