--- a/.github/workflows/ci_sca_depcheck.yaml
+++ b/.github/workflows/ci_sca_depcheck.yaml
@@ -22,58 +22,45 @@ jobs:
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
           git config --global user.name "${{secrets.GIT_USER_NAME}}"
 
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 8
-
-      - name: install pnpm
-        run: pnpm install
+      - name: install npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GIT }}
+        run: npm ci
 
       # SCA
       # SNYK
-      # - name: Run Snyk to check for vulnerabilities
-      #   uses: snyk/actions/node@master
-      #   continue-on-error: true
-      #   env:
-      #     SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      #   with:
-      #     args: --sarif-file-output=snyk.sarif
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --sarif-file-output=snyk.sarif
 
-      # - name: Upload result to GitHub Code Scanning
-      #   uses: github/codeql-action/upload-sarif@v3
-      #   with:
-      #     sarif_file: snyk.sarif
-      #     category: my-analysis-tool
-
-      # - name: where pnpm
-      #   run: |
-      #     which pnpm-lock.yaml
-      #     which pnpm
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: snyk.sarif
+          category: my-analysis-tool
       
       # OWASP DEPENDENCY CHECK
       - name: Depcheck
         uses: dependency-check/Dependency-Check_Action@main
-        id: Depcheck1
+        id: Depcheck
         with:
           project: 'tcc-password-manager'
-          path: 'pnpm-lock.yaml'
-          format: 'HTML'
-          out: '.'
+          path: './'
+          format: 'ALL'
+          out: 'depcheck'
           args: >
             --enableRetired
-            --pnpm '/usr/local/bin/pnpm'
+            --nvdApiKey ${{ secrets.NVD_API_KEY }}
+      
+      - name: Upload SARIF results file
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: depcheck/dependency-check-report.sarif
 
-      # # OWASP DEPENDENCY CHECK
-      # - name: Depcheck
-      #   uses: dependency-check/Dependency-Check_Action@main
-      #   id: Depcheck
-      #   with:
-      #     project: 'tcc-password-manager'
-      #     path: './'
-      #     format: 'HTML'
-      #     out: '.'
-      #     args: >
-      #       --enableRetired
 
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v3
