--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "octokit": "^4.0.2",
     "react": "^18.2.0",
