--- a/.github/workflows/hml.yaml
+++ b/.github/workflows/hml.yaml
@@ -1,4 +1,4 @@
-name: Homolog and DAST
+name: HOMOLOG and DAST
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
