--- a/.github/workflows/hml.yaml
+++ b/.github/workflows/hml.yaml
@@ -1,41 +1,34 @@
-name: CD_PROD
+name: HOMOLOG and DAST
 env:
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID_PROD }}
-  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_PROD }}
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
-on: 
+on:
   push:
-    branches: [main]
+    branches: [develop]
+  pull_request:
+    branches:
+      - develop
+    types: [ closed ]
 
 defaults:
   run:
     shell: bash
 
 jobs:
-  deploy_prod:
-    environment: prod
-    name: 'Deploy to Prod'
+  deploy_homolog:
+    environment: homolog
+    name: 'deploy to homolog'
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
-        
+        uses: actions/checkout@v4
 
       - name: Config GitHub
         run: |
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
           git config --global user.name "${{secrets.GIT_USER_NAME}}"
-
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-
-      - uses: pnpm/action-setup@v4
-        name: Install pnpm
-        id: pnpm-install
-        with:
-          version: 7
-          run_install: false
   
       - name: Install Vercel CLI
         run: npm install --global vercel
@@ -49,3 +42,8 @@ jobs:
       - name: Deploy Project Artifacts
         run: |
           vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+    
+  dast:
+    needs: deploy_homolog
+    uses: ./.github/workflows/dast.yaml
+    secrets: inherit
