--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -33,7 +33,7 @@ jobs:
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build Project Artifacts
-        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel build --prod --token=QB17lTEo2ZoBf4UZxeGiOfNs
 
       - name: Deploy Project Artifacts
         run: |
