--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -30,7 +30,7 @@ jobs:
         run: npm install --global vercel
 
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --environment=production --token=QB17lTEo2ZoBf4UZxeGiOfNs
 
       - name: Build Project Artifacts
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
